--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "This is data selfie app taken from Joey lee for learning",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node index.js"
   },
   "author": "Hasan Albayrak",
   "license": "MIT",
